[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets food/FreePixelFood/Assets/FreePixelFood/Sprite/Food/Tomato.png" type="Texture" id=1]
[ext_resource path="res://scripts/food3.gd" type="Script" id=2]
[ext_resource path="res://audio/Game Object Pick Up Sound Effect.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="rice" type="Area2D"]
scale = Vector2( 2, 2 )
collision_layer = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.315147, -0.122192 )
scale = Vector2( 0.0113288, 0.0107504 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="GoodFoodSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -1.0
pitch_scale = 1.4

[connection signal="body_entered" from="." to="." method="_on_rice_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="finished" from="GoodFoodSound" to="." method="_on_GoodFoodSound_finished"]
